--- a/tmx/.config/Code/User/settings.json
+++ b/tmx/.config/Code/User/settings.json
@@ -20,10 +20,22 @@
     "scminput": false
   },
   "files.associations": {
-    "*.ts": "typescript"
+    "*.ts": "typescript",
+    "*.svelte": "svelte"
   },
   "[astro]": {
     "editor.defaultFormatter": "astro-build.astro-vscode"
   },
-  "github.copilot.editor.enableAutoCompletions": true
+  "github.copilot.editor.enableAutoCompletions": true,
+  "[terraform]": {
+    "editor.defaultFormatter": "hashicorp.terraform"
+  },
+  "[svelte]": {
+    "editor.defaultFormatter": "svelte.svelte-vscode"
+  },
+  "supermaven.enable": {
+    "*": true
+  },
+  "terminal.integrated.commandsToSkipShell": ["language-julia.interrupt"],
+  "julia.symbolCacheDownload": true
 }
