--- a/tmx/.config/Code/User/settings.json
+++ b/tmx/.config/Code/User/settings.json
@@ -26,7 +26,7 @@
   "[astro]": {
     "editor.defaultFormatter": "astro-build.astro-vscode"
   },
-  "github.copilot.editor.enableAutoCompletions": true,
+  "github.copilot.editor.enableAutoCompletions": false,
   "[terraform]": {
     "editor.defaultFormatter": "hashicorp.terraform"
   },
@@ -45,5 +45,5 @@
       "source.organizeImports": "explicit"
     }
   },
-  "isort.args": ["--profile", "black"]
+  "isort.args": ["--profile", "black"],
 }
