--- a/tmx/.config/starship.toml
+++ b/tmx/.config/starship.toml
@@ -1,7 +1,6 @@
 # NOTES
 # Container module is maybe interesting
 # Direnv
-
 format = """
 $username\
 $hostname\
@@ -9,33 +8,21 @@ ${custom.separator}\
 $directory\
 $git_branch\
 $git_status\
+$fill\
+$python\
+$lua\
+$nodejs\
+$golang\
+$haskell\
+$rust\
+$ruby\
+$package\
+$aws\
+$docker_context\
 $jobs\
 $cmd_duration\
+$line_break\
 $character"""
-
-# PREVIOUS FORMAT
-# format = """
-# $username\
-# $hostname\
-# ${custom.separator}\
-# $directory\
-# $git_branch\
-# $git_status\
-# $fill\
-# $python\
-# $lua\
-# $nodejs\
-# $golang\
-# $haskell\
-# $rust\
-# $ruby\
-# $package\
-# $aws\
-# $docker_context\
-# $jobs\
-# $cmd_duration\
-# $line_break\
-# $character"""
 
 add_newline = true
 palette = 'nord'
