--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ tmx/.config/gcloud
 tmx/.config/firebase
 tmx/.config/direnv
 tmx/.config/simple-update-notifier
+
+# Managed by Nix/home-manager
+tmx/.config/aerospace/
+tmx/.config/aerospace.bak/
+tmx/.config/git/config
+tmx/.config/tmux/tmux.conf
